# tectonic-api

./: .dockerignore  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.build  README.md  supervisord.conf
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot.yml  main.yml  warmer.yml
scripts/: collect_profiles.rs  install_texlive_bundle.rs
scripts/profiles/: math.tex  report.tex  table.tex
src/: api.rs  compile.rs  features.rs  index.rs  lib.rs  main.rs  state.rs  v1.rs
src/api/: health.rs  v1.rs  v2.rs
src/api/v1/: compile.rs
src/api/v2/: pdf.rs
src/v1/: compile.rs  health.rs  index.rs
