[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[package]
name = "tectonic-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
gxhash = "3.5.0"
moka = { version = "0.12.10", features = ["future"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["util"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
utoipauto = "0.2.0"
tectonic = { git = "https://github.com/tectonic-typesetting/tectonic.git", default-features = false, features = [
    "geturl-curl",
] }

[features]
hybrid = ["gxhash/hybrid"]
