[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[package]
name = "tectonic-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
gxhash = "3.5.0"
moka = { version = "0.12.12", features = ["future"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["util"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipauto = "0.2.0"
tectonic = { git = "https://github.com/tectonic-typesetting/tectonic.git", default-features = false, features = [
    "geturl-curl",
] }

[features]
hybrid = ["gxhash/hybrid"]
