[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[package]
name = "tectonic-api"
version = "2.0.0"
edition = "2024"

[features]
hybrid = ["gxhash/hybrid"]

[dependencies]
axum = { version = "0.8.8", default-features = false, features = ["tokio", "query", "json", "http1", "http2"] }
gxhash = { version = "3.5.0", default-features = false, features = ["std"] }
moka = { version = "0.12.13", default-features = false, features = ["future"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
tokio = { version = "1.49.0", default-features = false }
utoipa = { version = "5.4.0", default-features = false, features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", default-features = false, features = ["axum"] }
utoipauto = { version = "0.3.0-alpha.2", default-features = false }

[dependencies.tectonic]
git = "https://github.com/tectonic-typesetting/tectonic.git"
default-features = false
features = ["external-harfbuzz"]
